# pykrasue

./: LICENSE  pyproject.toml  readme.md
PyKrasue.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
documentation/: crash_course.md
documentation/reference/: invocation.md  sprite_group.md
examples/: 1-clear-window.py
examples/1-clear-window/: _pygame.py  _pykrasue.py  readme.md
examples/2-sprite-groups/: _pygame.py  _pykrasue.py  readme.md
krasue/: __init__.py  krasue.py
krasue/PyKrasue.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
krasue/backends/opengl/: azdo.py  common.py  modern.py
src/: config.py  krasue.py  window.py
src/PyKrasue.egg-info/: PKG-INFO  top_level.txt
